# sBIF

./: .gitignore  CMakeLists.txt  test.ipynb
data/folding_input/: GM.chr1.13000000.13075000.txt  GM.chr5.1555000.5555000.txt  IMR.chr1.2745000.12950000.txt  K.chr1.2480000.2705000.d522c79e1e5749a9abe8f8b61f6784d2dl44ppmy.txt  K.chr1.770000.2705000.txt  chr22.24960000.28120000.txt
example/: drosChr2L.sh  test.ipynb
src/: dumping.cpp  dumping.h  help.cpp  loading.cpp  loading.h  main.cpp
